--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,17 +1,1 @@
-*{
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: sans-serif;
-}
-
-
-.nav{
-  width: 100%;
-  height: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 20px;
-  background-color: #000;
-}
+@import "tailwindcss";
