--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+#jo{
+    animation: jo 2.3s infinite linear;
+}
+
+@keyframes jo {
+    0%{
+        scale: 1;
+    }
+    50%{
+        scale: 1.3;
+    }
+    100%{
+        scale: 1;
+    }
+}
